--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 </head>
 <body>
 
-<p class="header"><img src="img/0.png"></p>
+<p class="header"><img src="nonopaque.github.io/img/0.png"></p>
 
 <div class="header_image">
-<img src="img/1.png">
+<img src="nonopaque.github.io/img/1.png">
 <p>THE WEBSITE<br>OF INTRODUCTION<br>OF OUR PETS</p>
 </div>
 
 
 <div class="about">
-<img src="img/2.png">	
+<img src="nonopaque.github.io/img/2.png">	
 <div class="about_text">
  <h1>ABOUT</h1>
  <h2>動物と共存する<br>
@@ -47,39 +47,39 @@
  クッキーはちょっと怖がりだけど優しいお兄ちゃん、<br>
  ローラは散歩が大好きな元気な女の子です。<br>
  ローラちゃんは2018年の1月から天国で私たちを見守ってくれています。</p>
- <img src="img/3.png" class="img3">
- <img src="img/4.png" class="img4">
+ <img src="nonopaque.github.io/img/3.png" class="img3">
+ <img src="nonopaque.github.io/img/4.png" class="img4">
 </div>
 
 <div class="case_study">
   <h1>PHOTO GALLERY <i class="fas fa-angle-double-right"></i></h1>
   <div class="img56789">
-     <img src="img/5.png" class="img5">
+     <img src="nonopaque.github.io/img/5.png" class="img5">
      <div class="img67">
-  	     <img src="img/6.png" class="img6"><br>
-  	     <img src="img/7.png" class="img7">
+  	     <img src="nonopaque.github.io/img/6.png" class="img6"><br>
+  	     <img src="inonopaque.github.io/mg/7.png" class="img7">
      </div>
      <div class="img89">
-  	     <img src="img/8.png" class="img8"><br>
-  	     <img src="img/9.png" class="img9">
+  	     <img src="nonopaque.github.io/img/8.png" class="img8"><br>
+  	     <img src="nonopaque.github.io/img/9.png" class="img9">
      </div>
   </div>
 </div>
 
 <div class="clip_garden">
 	<div class="clip_garden2">
-	 <img src="img/10.png" class="img10">
+	 <img src="nonopaque.github.io/img/10.png" class="img10">
 	 <div class="gardening_service">
 	     <h3>THE NEW FACE <i class="fas fa-angle-double-right"></i></h3>
 	     <p>2018年夏ごろから、永井家には、「しろちゃん」という野良猫ちゃんが家に遊びに来るようになりました。<br>
 	     最初は初めて入る「家」に戸惑っていたのですが、猫ならではの気ままさで、今やすっかり我が家に溶け込んでいます。</p>
 	 </div>
-	 <img src="img/11.png" class="img11">
+	 <img src="nonopaque.github.io/img/11.png" class="img11">
     </div>
 </div>
 
 <footer>
-	<img src="img/12.png" class="img12">
+	<img src="nonopaque.github.io/img/12.png" class="img12">
 	<p>ABOUT / DOGS / GALLERY / NEWCOMER</p>
 	<p><i class="far fa-file-alt"></i><i class="far fa-envelope"></i></p>
 	<p class="COPYRIGHT">COPYRIGHT © NAGAI FAMILY'S PETS, ALL RIGHTS RESERVED.</p>
