--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      <img src="nonopaque.github.io/img/5.png" class="img5">
      <div class="img67">
   	     <img src="nonopaque.github.io/img/6.png" class="img6"><br>
-  	     <img src="inonopaque.github.io/mg/7.png" class="img7">
+  	     <img src="nonopaque.github.io/img/7.png" class="img7">
      </div>
      <div class="img89">
   	     <img src="nonopaque.github.io/img/8.png" class="img8"><br>
