--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
 	<link href="" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
 
-<p class="header"><img src="nonopaque.github.io/img/0.png"></p>
+<p class="header"><img src="img/0.png"></p>
 
 <div class="header_image">
-<img src="nonopaque.github.io/img/1.png">
+<img src="img/1.png">
 <p>THE WEBSITE<br>OF INTRODUCTION<br>OF OUR PETS</p>
 </div>
 
 
-<div class="about">
-<img src="nonopaque.github.io/img/2.png">	
+<div class="about" id="about">
+<p class="img2"><img src="img/2.png"></p>	
 <div class="about_text">
  <h1>ABOUT</h1>
  <h2>動物と共存する<br>
@@ -41,46 +41,46 @@
 </div>
 </div>
 
-<div class="service">
+<div class="service" id="dogs">
  <h1>DOGS</h1>
  <p>我が家には「クッキー」と「ローラ」という２匹の犬がいました。<br>
  クッキーはちょっと怖がりだけど優しいお兄ちゃん、<br>
  ローラは散歩が大好きな元気な女の子です。<br>
  ローラちゃんは2018年の1月から天国で私たちを見守ってくれています。</p>
- <img src="nonopaque.github.io/img/3.png" class="img3">
- <img src="nonopaque.github.io/img/4.png" class="img4">
+ <img src="img/3.png" class="img3">
+ <img src="img/4.png" class="img4">
 </div>
 
-<div class="case_study">
+<div class="case_study" id="gallery">
   <h1>PHOTO GALLERY <i class="fas fa-angle-double-right"></i></h1>
   <div class="img56789">
-     <img src="nonopaque.github.io/img/5.png" class="img5">
+     <img src="img/5.png" class="img5">
      <div class="img67">
-  	     <img src="nonopaque.github.io/img/6.png" class="img6"><br>
-  	     <img src="nonopaque.github.io/img/7.png" class="img7">
+  	     <img src="img/6.png" class="img6"><br>
+  	     <img src="img/7.png" class="img7">
      </div>
      <div class="img89">
-  	     <img src="nonopaque.github.io/img/8.png" class="img8"><br>
-  	     <img src="nonopaque.github.io/img/9.png" class="img9">
+  	     <img src="img/8.png" class="img8"><br>
+  	     <img src="img/9.png" class="img9">
      </div>
   </div>
 </div>
 
-<div class="clip_garden">
+<div class="clip_garden" id="newcomer">
 	<div class="clip_garden2">
-	 <img src="nonopaque.github.io/img/10.png" class="img10">
+	 <img src="img/10.png" class="img10">
 	 <div class="gardening_service">
 	     <h3>THE NEW FACE <i class="fas fa-angle-double-right"></i></h3>
 	     <p>2018年夏ごろから、永井家には、「しろちゃん」という野良猫ちゃんが家に遊びに来るようになりました。<br>
 	     最初は初めて入る「家」に戸惑っていたのですが、猫ならではの気ままさで、今やすっかり我が家に溶け込んでいます。</p>
 	 </div>
-	 <img src="nonopaque.github.io/img/11.png" class="img11">
+	 <img src="img/11.png" class="img11">
     </div>
 </div>
 
 <footer>
-	<img src="nonopaque.github.io/img/12.png" class="img12">
-	<p>ABOUT / DOGS / GALLERY / NEWCOMER</p>
+	<img src="img/12.png" class="img12">
+	<p><a href="#about">ABOUT</a> / <a href="#dogs">DOGS</a> / <a href="#gallery">GALLERY</a> / <a href="#newcomer">NEWCOMER</a></p>
 	<p><i class="far fa-file-alt"></i><i class="far fa-envelope"></i></p>
 	<p class="COPYRIGHT">COPYRIGHT © NAGAI FAMILY'S PETS, ALL RIGHTS RESERVED.</p>
 </footer>
